--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+:root {
+    --green: #00FF00;
+    --white: #ffffff;
+    --black: #000000;
+  }
+* {
+    color: var(--fontColor);
+    font-family: helvetica;
+}
 body {
     font-family: Georgia;
 }
